# parallel-numerical-methods-final

./: CMakeLists.txt  p.md  readme.md
NumericalMesh/PoissonSolver/: CMakeLists.txt  readme.md
NumericalMesh/PoissonSolver/src/: Mesh.cpp  main.cpp
NumericalMesh/WebGL/: index.html  style.css
NumericalMesh/WebGL/scripts/: OBJLoader.js
PoissonSolver/src/: Mesh.h  main.cpp
WebGL/scripts/: main.js
